# IPGUI

./: .ninja_deps  .ninja_log  .qmake.stash  CMakeCache.txt  CMakeLists.txt  Makefile  Makefile.Debug  Makefile.Release  README.md  appicon.rc  build.ninja  cmake_install.cmake  makeit.bat  ng.cpp  ng.h  ng.pro  ng_tot_ex.cpp
.qt/: QtDeploySupport.cmake  QtDeployTargets.cmake
release/: moc_ng.cpp  moc_predefs.h
